kustomization/components/ara/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ara-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: ara
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ara
    spec:
      containers:
        - name: ara
          image: quay.io/recordsansible/ara-api:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /opt/ara
              name: settings
              readOnly: true
      volumes:
        - configMap:
            name: settings-configmap
          name: settings
