kustomization/components/ara/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ara-svc
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app.kubernetes.io/name: ara
