kustomization/components/ara/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: ara-ingress
spec:
  ingressClassName: traefik-man-ingressclass
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ara-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
